=== 1.9.26-2 ===
2009-12-15 George Y. Kussumoto <george@async.com.br>

	Bugfix Release 1.9.26-2

2009-12-11 George Y. Kussumoto <george@async.com.br>

	* kiwi/ui/entry.py: Added a workaround for set_text method in KiwiEntry
	when using gtk > 2.18.

=== 1.9.26 ===
2009-07-14 George Y. Kussumoto <george@async.com.br>

	Release 1.9.26

2009-07-01  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: george@async.com.br

	* kiwi/ui/objectlist.py: Enable custom sort_func for objectlists

2009-06-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: george@async.com.br

	* kiwi/ui/search.py: Update search if entry activates and enable decimal
                         digits for number searching.

2009-06-17 George Y. Kussumoto <george@async.com.br>
	reviewed by: romaia@async.com.br

	* kiwi/ui/views.py: Added enable_window_controls in SlaveView. (#3866:
	Possibilitar a maximização das telas no processo de compras).

2009-06-05  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/ui/search.py: Fix: update callsite after bugfix 3981.

2009-06-01  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/test/test_datatypes.py: Fix sv_SE thousand separators.

=== 1.9.25 ===
2009-04-15 George Y. Kussumoto <george@async.com.br>

	Release 1.9.25

2009-04-14: Severin Heiniger <severinheiniger@gmail.com>
	reviewed by: jdahlin@async.com.br

	* kiwi/dist.py: Do not overwrite custom cmdclass entries.

2009-03-10 George Y. Kussumoto <george@async.com.br>
	reviewed by: romaia@async.com.br

	* kiwi/ui/widgets/combo.py: Added get_selected_data method in
	ProxyComboEntry class, in order to fix some issues with completetion.

2009-02-27 George Y. Kussumoto <george@async.com.br>
	reviewed by: romaia@async.com.br

	* kiwi/ui/search.py: Added SearchFilter get_description method for each
	subclass and an accessor for all search filters in a SearchContainer.

2009-02-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: george@async.com.br
